// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TutorialItem should ignore a label link and children when the item is completed 1`] = `
<Panel.Section>
  <div
    className="Item completed"
  >
    <div
      className="Icon"
    >
      <div
        className="CompletedBackDrop"
      >
        <Check
          className="Completed"
          size={21}
        />
      </div>
    </div>
    <div
      className="Content"
    >
      <h6
        className="Label"
      >
        my item
      </h6>
      <div
        className="HelpText"
      >
        Evie
        Levon
      </div>
    </div>
  </div>
</Panel.Section>
`;

exports[`Component: TutorialItem should render correctly by default 1`] = `
<Panel.Section>
  <div
    className="Item"
  >
    <div
      className="Icon"
    >
      <div
        className="NotCompleted"
      />
    </div>
    <div
      className="Content"
    >
      <h6
        className="Label"
      >
        my item
      </h6>
      <div
        className="HelpText"
      >
        Evie
        Levon
      </div>
    </div>
  </div>
</Panel.Section>
`;

exports[`Component: TutorialItem should render the link and children when not completed 1`] = `
<Panel.Section>
  <div
    className="Item"
  >
    <div
      className="Icon"
    >
      <div
        className="NotCompleted"
      />
    </div>
    <div
      className="Content"
    >
      <h6
        className="Label"
      >
        my item
      </h6>
      <div
        className="HelpText"
      >
        Evie
        Levon
      </div>
    </div>
  </div>
</Panel.Section>
`;

exports[`Component: TutorialItem should show checkmark when task is completed 1`] = `
<Panel.Section>
  <div
    className="Item completed"
  >
    <div
      className="Icon"
    >
      <div
        className="CompletedBackDrop"
      >
        <Check
          className="Completed"
          size={21}
        />
      </div>
    </div>
    <div
      className="Content"
    >
      <h6
        className="Label"
      >
        my item
      </h6>
      <div
        className="HelpText"
      >
        Evie
        Levon
      </div>
    </div>
  </div>
</Panel.Section>
`;
